--- a/Contact.html
+++ b/Contact.html
@@ -8,7 +8,7 @@
     <h3>Contact us</h3>
         <ul>
             <li><a href="https://www.facebook.com/Generators-and-Motorbikes-Clinic-102380296042607">Facebook</a></li>
-            <li>Phone number: +27 64 331 4595</li>
+            <li>Phone number: +27 64 331 4595/+27 69 560 5071/+27 61 628 7317</li>
             <li><a href="https://mail.google.com/mail/u/0/#inbox?compose=GTvVlcRzCMldKFMLnXsRVmXxnzMxSftNRTCpsgklGTFFqkjTwPwMmgflNpBfHGQsGdPZcWwNczqzk">email us</a></li>
             <li><a href="https://www.google.com/maps/place/Generators+and+Motorbikes+Clinic+(Repairs),+GMC/@-33.9288471,18.3962852,13z/data=!4m10!1m2!2m1!1sgenerators+repair!3m6!1s0x1dcc5d21530acb4d:0xec50d6c510ed6b4a!8m2!3d-33.9288471!4d18.4622032!15sChFnZW5lcmF0b3JzIHJlcGFpcpIBDnJlcGFpcl9zZXJ2aWNl4AEA!16s%2Fg%2F11tcwlf967">Google Map</a></li>
         </ul>
