--- a/index.html
+++ b/index.html
@@ -23,16 +23,18 @@
     </center>
         <hr>
         <h3>Our services</h3>
+        <p>At GMC, we repair any:</p>
         <ol>
-            <li>Generators repair</li>
-            <li>Motorbikes repair</li>
-            <li>Scooters repair</li>
-            <li>Selling parts</li>
+            <li>Superbikes: Suzuki, Honda, Yamaha, etc.</li>
+            <li>Japanese motorbikes</li>
+            <li>Chinese motorbikes</li>
+            <li>Scooters</li>
+            <li><strong>Generators</strong>, big or small</li>
         </ol>
         <hr>
         <h3>Selling Parts</h3>
         <ul>
-            <li>Parts for motorbikes</li>
+            <li>Parts for motorcycles</li>
             <li>Parts for scooters</li>
             <li>Parts for generators</li>
         </ul>
@@ -86,10 +88,17 @@
             </table>
         <hr>
         <center>
-        <a href="Contact.html"><strong>CONTACT US</strong></a>
+            <table cellpadding="20">
+                <tr>
+                    <td><a href="library.html"><strong>Library</strong></a></td>
+                    <td><a href="Contact.html"><strong>Contact us</strong></a></td>
+                    <td><a href="https://www.facebook.com/Generators-and-Motorbikes-Clinic-102380296042607"><strong>Facebook</strong></a></td>
+                </tr>
+            </table>
         </center>
     </body>
 </html>
+
 
 
 <!.. to make round an image: https://crop-circle.imageonline.co/ ..>
