--- a/library.html
+++ b/library.html
@@ -1,44 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-   <head>
+<head>
     <meta charset="UTF-8">
-    <title>Contacts</title>
-    <link rel="stylesheet" href="css/styles.css">
-  </head>
-  <body style="#D6E4E5">
-
-        <div class="contact">
-            <h3 class="h3-contact">Contact us</h3>
-            <ol>
-                <li><a class="link" href="https://mail.google.com/mail/u/0/#inbox?compose=GTvVlcRzCMldKFMLnXsRVmXxnzMxSftNRTCpsgklGTFFqkjTwPwMmgflNpBfHGQsGdPZcWwNczqzk">Email us</a></li>
-                <li><a class="link" href="https://www.google.com/maps/place/Generators+and+Motorbikes+Clinic+(Repairs),+GMC/@-33.9288471,18.3962852,13z/data=!4m10!1m2!2m1!1sgenerators+repair!3m6!1s0x1dcc5d21530acb4d:0xec50d6c510ed6b4a!8m2!3d-33.9288471!4d18.4622032!15sChFnZW5lcmF0b3JzIHJlcGFpcpIBDnJlcGFpcl9zZXJ2aWNl4AEA!16s%2Fg%2F11tcwlf967">Google Map</a></li>
-                <li><p class="numbers"> Phone number:</p>
-                    <ul>
-                        <li>+27 64 331 4595</li>
-                        <li>+27 69 560 5071</li>
-                        <li>+27 61 628 7317</li>
-                    </ul>
-                </li>
-            </ol>
-        </div>
-
-    <hr>
-
-        <div class="contact">
-            <form action="mailto: gemoclinic@gmail.com" method="post" enctype="text/plain">
-              <label  class="numbers">Your full name:</label>
-              <input class="input1" type="Text" name="Your full name" value=""><br>
-              <label class="numbers">Your email:</label>
-              <input class="input2" type="email" name="Your email" value=""><br>
-              <label class="numbers">Your phone number:</label>
-              <input class="input3" type="tel" name="Your phone number" value=""><br>
-              <label class="numbers">Your message:</label><br>
-              <textarea class="text" name="Your message" rows="10" cols="30"></textarea><br>
-              <input class="link" type="file" name="" value=""><br>
-              <input class="link" type="submit" name="">
-            </form>
-        </div>
-
-
-  </body>
+    <title>Library</title>
+        <link rel="stylesheet" href="css/styles.css">
+</head>
+<body>
+  <img src="image/generator.jpg" alt="GMC image" width="300" height="300">
+  <img src="image/motorbike.jpg" alt="GMC image" width="300" height="300">
+  <img src="image/Japanese2.png" alt="GMC image" width="300" height="300">
+  <img src="image/Japanese3.png" alt="GMC image" width="300" height="300">
+  <img src="image/Scooters.png" alt="GMC image" width="300" height="300">
+  <img src="image/Superbikes.png" alt="GMC image" width="300" height="300">
+  <img src="image/Japanese.png" alt="GMC image" width="300" height="300">
+</body>
 </html>
