--- a/index.html
+++ b/index.html
@@ -1,46 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
+    <head  class="top">
         <meta charset="UTF-8">
         <title>🏍GMC🛵</title>
+            <link rel="stylesheet" href="css/styles.css">
+            <link rel="icon" href="image/favicon.ico">
     </head>
-
     <body>
+    <div class="top">
     <center>
-        <h2>Generators and Motorbikes Clinic</h2>
-        <table cellpadding="40">
+        <h2>GMC</h2>
+        <table>
             <tr>
-                <td><img src="image/generator.jpg" alt="Generator image" width="200"
-                 height="200"></td>
-                <td><h1>⭐⭐⭐⭐⭐ GMC ⭐⭐⭐⭐⭐</h1></td>
-                <td><img src="image/motorbike.jpg" alt="Motorbike image" width="200" height="200"></td>
+                <td><img src="image/generator.jpg" alt="Generator image" width="250" height="250"></td>
+                <td><h1 id="full-name"><strong class="underline">G</strong>enerators and <strong class="underline">M</strong>otorbikes <strong class="underline">C</strong>linic</h1></td>
+                <td><img src="image/motorbike.jpg" alt="Motorbike image" width="250" height="250"></td>
             </tr>
 
         </table>
-        <p><em><strong>Repair Services</strong></em></p>
-        <p>We repair all kind of motorbikes, scooters and generators. We are highly known and being recognized to all
+        <p class="under2">Repair Services🛠</p>
+        <p class="p2">We repair all kind of motorbikes, scooters and generators. We are highly known and recognized to all
             our clients as the industry repairing expert.</p>
     </center>
-        <hr>
+    </div>
+    <div class="middle">
+        <hr class="h">
         <h3>Our services</h3>
-        <p>At GMC, we repair any:</p>
-        <ol>
-            <li>Superbikes: Suzuki, Honda, Yamaha, etc.</li>
-            <li>Japanese motorbikes</li>
-            <li>Chinese motorbikes</li>
-            <li>Scooters</li>
-            <li><strong>Generators</strong>, big or small</li>
-        </ol>
+        <p class="p3">At GMC, we repair any:</p>
+        <table class="middle-content">
+            <tr>
+                <td>- Superbikes: Suzuki, Honda, Yamaha, etc.</td>
+            </tr>
+            <tr>
+                <td>- Japanese motorbikes</td>
+            </tr>
+            <tr>
+                <td>- Chinese motorbikes</td>
+            </tr>
+            <tr>
+                <td>- Scooters</td>
+            </tr>
+            <tr>
+                <td>- Generators, big or small</td>
+            </tr>
+        </table>
+        <img class="bg" src="mtr/moto gift.gif" alt="Bike gif">
         <hr>
         <h3>Selling Parts</h3>
-        <ul>
-            <li>Parts for motorcycles</li>
-            <li>Parts for scooters</li>
-            <li>Parts for generators</li>
-        </ul>
+        <table class="middle-content">
+            <tr>
+                <td>- Parts for motorcycles</td>
+            </tr>
+            <tr>
+                <td>- Parts for scooters</td>
+            </tr>
+            <tr>
+                <td>- Parts for generators</td>
+            </tr>
+        </table>
         <hr>
         <h3>Working hours</h3>
-            <table cellspacing="10">
+            <table class="middle-content" cellspacing="10">
                 <thead>
                     <tr>
                         <th>Day</th>
@@ -86,19 +106,29 @@
 
                 </tbody>
             </table>
-        <hr>
+        <img class="bg2" src="generator2/gene.gif" alt="Bike gif">
+        <center class="cbtn">
+            <a class="btn" href="Contact.html"><strong>Contact us</strong></a>
+        </center>
+        <hr class="h">
+    </div>
+    <div class="bottom">
         <center>
-            <table cellpadding="20">
+            <table class="bottom-content" >
                 <tr>
-                    <td><a href="library.html"><strong>Library</strong></a></td>
-                    <td><a href="Contact.html"><strong>Contact us</strong></a></td>
-                    <td><a href="https://www.facebook.com/Generators-and-Motorbikes-Clinic-102380296042607"><strong>Facebook</strong></a></td>
+                    <td><a class="link" href="library.html"><strong>Library</strong></a></td>
+                    <td><a class="link" href="https://www.facebook.com/Generators-and-Motorbikes-Clinic-102380296042607"><strong>Facebook</strong></a></td>
                 </tr>
             </table>
+            <p class="cr">© 2022 Cedric Benonga @ Generators and Motorbikes Clinic.</p>
         </center>
+    </div>
     </body>
 </html>
 
+
+<!.. to make round an image: https://crop-circle.imageonline.co/ ..>
+<! https://giphy.com/gifs/motorcycle-yamaha-supersport-fvffSR2LqPfb2fFRlw >
 
 
 <!.. to make round an image: https://crop-circle.imageonline.co/ ..>
